Title size fixed on smaller devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
         font-size: 3rem;
         padding: 0 0.5rem;
     }
+
 }
 
 .about {
@@ -149,3 +150,10 @@ footer {
 }
 
 @import 'responsive';
+@media (max-width: 700px) {
+    .hero {
+        h1 {
+            font-size: 2rem;
+        }
+    }
+}
